policies/opa/deny-privileged-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyPrivileged
metadata:
  name: deny-privileged-articles
spec:
  enforcementAction: deny

  match:
    namespaces:
      - articles

    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
