policies/opa/deny-privileged-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sDenyPrivileged
      validation:
        openAPIV3Schema:
          type: object

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyprivileged

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true

          msg := sprintf(
            "Privileged container '%v' is not allowed",
            [container.name]
          )
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          container.securityContext.privileged == true

          msg := sprintf(
            "Privileged initContainer '%v' is not allowed",
            [container.name]
          )
        }
